--- a/Task 1 - CSS/style.css
+++ b/Task 1 - CSS/style.css
@@ -9,12 +9,12 @@ body{
     display: grid;
     position:relative;
     grid-template-columns: 1fr 1fr 1fr;
-    padding:5px;
-    margin:10px;
+    margin:5px;
     border-style: solid;
     border-color: red;
-    border-width: 5px;
-    height: 95%;
+    border-width: 4px;
+    border-radius: 10px;
+    height: 98%;
     max-width: 100%;
 }
 .wrapper
@@ -38,7 +38,8 @@ body{
     position: relative;
     border-color: violet;
     border-style: solid;
-    border-width: 4px;
+    border-width: 3px;
+    border-radius: 5px;
     padding: 5px;
 }
 .second
@@ -50,14 +51,16 @@ body{
     padding:5px;
     border-style: solid;
     border-color: violet;
-    border-width: 5px;
+    border-width: 3px;
+    border-radius: 5px;
     margin:5px;
 }
 .int1{
     padding:5px;
     border-style: solid;
     border-color: violet;
-    border-width: 5px;
+    border-width: 3px;
+    border-radius: 5px;
     height:40%;
     margin:5px;
 }
@@ -72,5 +75,6 @@ body{
     display: inline-block;
     border-style: solid;
     border-color: violet;
-    border-width: 5px;
+    border-width: 3px;
+    border-radius: 5px;
 }
